--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 
     <div class="content">
         <h1>Developers</h1>
-        <p>👑Ayaz👑 🛠DeatTwz🛠 🛠revencer🛠 🛠1omen12346🛠</p>
+        <p>👑Ayaz👑 🛠DeatTwz🛠 🛠revencer🛠 🛠Rvx🛠</p>
     </div>
 
     <footer>
