--- a/about.html
+++ b/about.html
@@ -75,6 +75,9 @@
 
     <footer>
         <p>&copy; 2024 Tfe. All rights reserved. Unauthorized duplication or publication of any materials from this site is prohibited.</p>
+<audio id="background-music" autoplay loop>
+    <source src="dvrst - close eyes ( slowed + reverb )" type="audio/mpeg">
+</audio>
     </footer>
 </body>
 </html>
