--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -64,7 +64,7 @@
     <div class="menu">
         <span class="title">Tfe | Turkish Armed Forces</span>
         <a href="index.html">Home</a>
-        <a href="services.html">Linkler</a> <!-- Bu link 'services.html' sayfasına yönlendirir -->
+        <a href="services.html">Linkler</a>
         <a href="about.html">About Us</a>
     </div>
 
@@ -72,6 +72,11 @@
         <h1>Welcome!</h1>
         <p>Welcome To The Tfe.</p>
     </div>
+
+    <audio id="background-music" autoplay loop>
+        <source src="media/dvrst_close_eyes.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 
     <footer>
         <p>&copy; 2024 Tfe. All rights reserved. Unauthorized duplication or publication of any materials from this site is prohibited.</p>
