--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -83,6 +83,7 @@
         <a href="index.html">Home</a>
         <a href="services.html">Linkler</a>
         <a href="about.html">About Us</a>
+        <a href="shop.html">Shop</a>
     </div>
 
     <div class="link-container">
