--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <a href="index.html">Home</a>
         <a href="services.html">Linkler</a>
         <a href="about.html">About Us</a>
+        <a href="shop.html">Shop</a>
     </div>
 
     <div class="content">
