--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -66,6 +66,7 @@
         <a href="index.html">Home</a>
         <a href="services.html">Linkler</a> <!-- Bu link 'services.html' sayfasına yönlendirir -->
         <a href="about.html">About Us</a>
+        <a href="shop.html">Shop</a> <!-- Bu link 'shop.html' sayfasına yönlendirir -->
     </div>
 
     <div class="content">
@@ -75,9 +76,9 @@
 
     <footer>
         <p>&copy; 2024 Tfe. All rights reserved. Unauthorized duplication or publication of any materials from this site is prohibited.</p>
-<audio id="background-music" autoplay loop>
-    <source src="dvrst - close eyes ( slowed + reverb )" type="audio/mpeg">
-</audio>
+        <audio id="background-music" autoplay loop>
+            <source src="dvrst - close eyes ( slowed + reverb )" type="audio/mpeg">
+        </audio>
     </footer>
 </body>
 </html>
