--- a/shop.html
+++ b/shop.html
@@ -92,8 +92,8 @@
     </div>
 
     <div class="content">
-        <h1>Welcome!</h1>
-        <p>Welcome To The Tfe.</p>
+        <h1>Shop</h1>
+        <p> </p>
 
         <div class="shop-buttons">
             <a href="#low-rank">💳 Low-Rank</a>
